# Computer-Graphics-Project

./: .gitignore  Final report.pages  README.md
CGP_Final/: README.txt
CGP_Final/repo/: README.txt
CGP_Final/repo/project/: main.cpp  trackball.h
CGP_Final/repo/project/camera/: camera.h
CGP_Final/repo/project/skybox/: skybox_fshader.glsl
CGP_Final/repo/project/terrain/: terrain.h  terrain_fshader.glsl  (+1 more)
CGP_Final/repo/textures/: rock.tga
icg17/: CMakeLists.txt  readme.txt
icg17/hw2_trackball/grid/: grid.h  grid_fshader.glsl
icg17/part1/: CMakeLists.txt  main.cpp  main_vlad.cpp  report.pages  trackball.h
icg17/part1/framebuffer/: framebuffer.h
icg17/part1/heightmap/: heightmap.h  heightmap_fshader.glsl
icg17/part1/screenquad/: screenquad.h  screenquad_fshader.glsl
icg17/part1/terrain/: terrain.h  terrain_fshader.glsl  terrain_vshader.glsl
icg17/part1/terrain(vlad)/: terrain.h  terrain_fshader.glsl  terrain_vshader.glsl
icg17/project/: CMakeLists.txt  main.cpp
icg17/project/camera/: camera.h
icg17/project/framebuffer/: framebuffer.h
icg17/project/heightmap/: heightmap.h  heightmap_fshader.glsl  heightmap_vshader.glsl
icg17/project/lighthouse/: lighthouse.h  lighthouse_fshader.glsl  lighthouse_vshader.glsl
icg17/project/skybox/: skybox.h  skybox_fshader.glsl  skybox_vshader.glsl
icg17/project/terrain/: terrain.h  terrain_fshader.glsl  terrain_vshader.glsl
icg17/project/waveheightmap/: waveheightmap.h  waveheightmap_fshader.glsl
icg17/project/wavenormalmap/: wavenormalmap_fshader.glsl
icg17/textures/: grass.tga  skybox.tga
(+3 files in other folders)
